Failure of C2 compilation with tiered prevents some C1 compilations

XMLWordPrintable

    • b127
    • generic
    • generic

        If C2 fails to compile a method then there are a few cases where it marks the method as not compilable at all tiers. I went through each case and it looks like none of them are justified, i.e., in each case the failure of C2 should not prevent the compilation with C1. I propose we remove the method Compile::record_method_not_compilable_all_tiers and call Compile::record_method_not_compilable instead.

              Assignee:
              Carsten Varming (Inactive)
              Reporter:
              Carsten Varming (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: